--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -3,7 +3,6 @@ ja:
     attributes:
       # roomモデル
       room:
-
         room_name: 個展名
         room_introduction: 個展の説明
         genre: ジャンル
@@ -14,3 +13,13 @@ ja:
         item_introduction: 作品の説明
         item_image: 作品画像
         price: 価格
+
+  activemodel:
+    attributes:
+      address_order:
+        city: 市区町村
+        postal_code: 郵便番号
+        building_name: 建物名
+        house_number: 番地
+        prefecture_id: 都道府県
+        token: トークン
